  be set.

- Bug #1460340: ``random.sample(dict)`` failed in various ways.  Dicts
  aren't officially supported here, and trying to use them will probably
  raise an exception some day.  But dicts have been allowed, and "mostly
  worked", so support for them won't go away without warning.

Tools/Demos
-----------

Build
-----

- Fix test_long failure on Tru64 with gcc by using -mieee gcc option.

Documentation
-------------

- Bug #1337990: clarified that ``doctest`` does not support examples
  requiring both expected output and an exception.


What's New in Python 2.4.3?
===========================

*Release date: 29-MAR-2006*

Core and builtins
-----------------

- A few reference leaks were squished.

- A threading issue that caused random segfaults on some platforms from
  the testsuite was fixed in test_capi.

- Reverted fix for Bug #1379994: Builtin unicode_escape and
  raw_unicode_escape codec now encodes backslash correctly.
  This caused another issue for unicode repr strings being double-escaped
  (SF Bug #1459029). Correct fix will be in 2.5, but is too risky for 2.4.3.

Extension Modules
-----------------

- Patch #1380952: fix SSL objects timing out on consecutive read()s

- Ubuntu bug #29289: Fixed a bug that the gb18030 codec raises
  RuntimeError on encoding surrogate pair area on UCS4 build.

What's New in Python 2.4.3c1?
=============================

*Release date: 23-MAR-2006*

Core and builtins
-----------------

- Bug #1115379: Compiling a Unicode string with an encoding declaration
  now gives a SyntaxError.

- Fix missing check on whether the PendingDeprecationWarning for string
  exceptions was re-raised as an actual PendingDeprecationWarning when
  'warnings' is set to a filter action of "error"

- Bug #1378022, UTF-8 files with a leading BOM crashed the interpreter.

- Patch #1400181, fix unicode string formatting to not use the locale.
  This is how string objects work.  u'%f' could use , instead of .